parte de operação de máquinas terminada

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 							</div>
 						</div>
 						<div class="img-wrapper-course">
-							<img src="images/Home/Fotos-Detalhadas/op-harvester-esteira.png" alt="">
+							<img src="images/Home/Fotos-Detalhadas/pc/caminhão-grua/op-caminhao-grua.png" alt="">
 						</div>	
 					</div>
 					<aside class="add-info">Duração do Curso: 24 horas</aside>
@@ -271,238 +271,286 @@
 			<div id="manutencao-de-maquinas-florestais">
 				<!-- Informações sobre o Curso de: Harvester de Esteira (Tipo uma section)-->
 				<div class="content" id="harvester-de-esteira-mt">
-					<div class="title-content"><h2>Harvester de Esteira (80 Horas)</h2></div>
-					<div class="text">
-						<p>Aprenda a consertar uma Harvester de Esteira de forma fácil aqui.</p>
-						<p>Conteúdo: </p>
-						<ul>
-							<li>Máquina Base</li>
-							<li>
-							<ul class="sublist">
-								<li>Apresentação dos Componentes</li>
-								<li>Sistema Rodante</li>
-								<li>Sistema Elétrico</li>
-								<li>Sistema Hidráulico</li>
-								<li>Ajustes da Grua</li>
-								<li>Sistema de Controle</li>
-								<li>Sistema de Supresssão de Incêndio</li>
-								<li>Diagnóstico de Falhas</li>
-							</ul>
-							</li>
-							<li>Cabeça Processadora</li>
-							<li>
-							<ul class="sublist">
-								<li>Sistema de Alimentação</li>
-								<li>Sistema de Desgalhamento</li>
-								<li>Sistema Hidráulico</li>
-								<li>Sistema Elétrico</li>
-								<li>Sistema de Corte</li>
-								<li>Sistema de Lubrificação</li>
-								<li>Sistema de Medição</li>
-								<li>Sistema Estrutural</li>
-								<li>Sistema de Controle</li>
-								<li>Diagnóstico de Falhas</li>
-							</ul>
-							</li>
-							<li>Motor Diesel</li>
-							<li>
-							<ul class="sublist">
-								<li>Sistema Mecânico</li>
-								<li>Sistema Elétrico</li>
-								<li>Sistema de Lubrificação</li>
-								<li>Sistema de Arrefecimento</li>
-								<li>Sistema de Alimentação</li>
-							</ul>
-							</li>
-						</ul>
+					<div class="title-content"><h2>Harvester de Esteira</h2></div>
+					<div class="row">
+						<div class="text-wrapper">
+							<div class="text">
+								<p>Aprenda a consertar uma Harvester de Esteira de forma fácil aqui.</p>
+								<p>Conteúdo: </p>
+								<ul>
+									<li>Máquina Base</li>
+									<li>
+									<ul class="sublist">
+										<li>Apresentação dos Componentes</li>
+										<li>Sistema Rodante</li>
+										<li>Sistema Elétrico</li>
+										<li>Sistema Hidráulico</li>
+										<li>Ajustes da Grua</li>
+										<li>Sistema de Controle</li>
+										<li>Sistema de Supresssão de Incêndio</li>
+										<li>Diagnóstico de Falhas</li>
+									</ul>
+									</li>
+									<li>Cabeça Processadora</li>
+									<li>
+									<ul class="sublist">
+										<li>Sistema de Alimentação</li>
+										<li>Sistema de Desgalhamento</li>
+										<li>Sistema Hidráulico</li>
+										<li>Sistema Elétrico</li>
+										<li>Sistema de Corte</li>
+										<li>Sistema de Lubrificação</li>
+										<li>Sistema de Medição</li>
+										<li>Sistema Estrutural</li>
+										<li>Sistema de Controle</li>
+										<li>Diagnóstico de Falhas</li>
+									</ul>
+									</li>
+									<li>Motor Diesel</li>
+									<li>
+									<ul class="sublist">
+										<li>Sistema Mecânico</li>
+										<li>Sistema Elétrico</li>
+										<li>Sistema de Lubrificação</li>
+										<li>Sistema de Arrefecimento</li>
+										<li>Sistema de Alimentação</li>
+									</ul>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="img-wrapper-course">
+							<img src="images/Home/Fotos-Detalhadas/pc/harvester-esteira/op-harvester-esteira.png" alt="">
+						</div>	
 					</div>
+					<aside class="add-info">Duração do Curso: 80 horas</aside>
 				</div>
 
 				<!-- Informações sobre o Curso de: Harvester de Pneu (Tipo uma section)-->
 				<div class="content" id="harvester-de-pneu-mt">
-					<div class="title-content"><h2>Harvester de Pneu (80 Horas)</h2></div>
-					<div class="text">
-						<p>Aprenda a consertar uma Harvester de Pneu.</p>
-						<p>Conteúdo: </p>
-						<ul>
-							<li>Máquina Base</li>
-							<li>
-							<ul class="sublist">
-								<li>Apresentação dos Componentes</li>
-								<li>Sistema Rodante</li>
-								<li>Sistema Elétrico</li>
-								<li>Sistema Hidráulico</li>
-								<li>Ajustes da Grua</li>
-								<li>Sistema de Controle</li>
-								<li>Sistema de Supresssão de Incêndio</li>
-								<li>Diagnóstico de Falhas</li>
-							</ul>
-							</li>
-							<li>Cabeça Processadora</li>
-							<li>
-							<ul class="sublist">
-								<li>Sistema de Alimentação</li>
-								<li>Sistema de Desgalhamento</li>
-								<li>Sistema Hidráulico</li>
-								<li>Sistema Elétrico</li>
-								<li>Sistema de Corte</li>
-								<li>Sistema de Lubrificação</li>
-								<li>Sistema de Medição</li>
-								<li>Sistema Estrutural</li>
-								<li>Sistema de Controle</li>
-								<li>Diagnóstico de Falhas</li>
-							</ul>
-							</li>
-							<li>Motor Diesel</li>
-							<li>
-							<ul class="sublist">
-								<li>Sistema Mecânico</li>
-								<li>Sistema Elétrico</li>
-								<li>Sistema de Lubrificação</li>
-								<li>Sistema de Arrefecimento</li>
-								<li>Sistema de Alimentação</li>
-							</ul>
-							</li>
-						</ul>
+					<div class="title-content"><h2>Harvester de Pneu</h2></div>
+					<div class="row">
+						<div class="text-wrapper">
+							<div class="text">
+								<p>Aprenda a consertar uma Harvester de Pneu.</p>
+								<p>Conteúdo: </p>
+								<ul>
+									<li>Máquina Base</li>
+									<li>
+									<ul class="sublist">
+										<li>Apresentação dos Componentes</li>
+										<li>Sistema Rodante</li>
+										<li>Sistema Elétrico</li>
+										<li>Sistema Hidráulico</li>
+										<li>Ajustes da Grua</li>
+										<li>Sistema de Controle</li>
+										<li>Sistema de Supresssão de Incêndio</li>
+										<li>Diagnóstico de Falhas</li>
+									</ul>
+									</li>
+									<li>Cabeça Processadora</li>
+									<li>
+									<ul class="sublist">
+										<li>Sistema de Alimentação</li>
+										<li>Sistema de Desgalhamento</li>
+										<li>Sistema Hidráulico</li>
+										<li>Sistema Elétrico</li>
+										<li>Sistema de Corte</li>
+										<li>Sistema de Lubrificação</li>
+										<li>Sistema de Medição</li>
+										<li>Sistema Estrutural</li>
+										<li>Sistema de Controle</li>
+										<li>Diagnóstico de Falhas</li>
+									</ul>
+									</li>
+									<li>Motor Diesel</li>
+									<li>
+									<ul class="sublist">
+										<li>Sistema Mecânico</li>
+										<li>Sistema Elétrico</li>
+										<li>Sistema de Lubrificação</li>
+										<li>Sistema de Arrefecimento</li>
+										<li>Sistema de Alimentação</li>
+									</ul>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="img-wrapper-course">
+							<img src="images/Home/Fotos-Detalhadas/pc/harvester-esteira/op-harvester-esteira.png" alt="">
+						</div>
 					</div>
+					<aside class="add-info">Duração do Curso: 80 horas</aside>
 				</div>
 
 				<!-- Informações sobre o Curso de: Forwarder (Tipo uma section)-->
 				<div class="content" id="forwarder-mt">
-					<div class="title-content"><h2>Forwarder (80 Horas)</h2></div>
-					<div class="text">
-						<p>Aprenda a consertar uma Forwarder.</p>
-						<p>Conteúdo: </p>
-						<ul>
-							<li>Máquina Base</li>
-							<li>
-							<ul class="sublist">
-								<li>Apresentação dos Componentes</li>
-								<li>Sistema Rodante</li>
-								<li>Sistema Elétrico</li>
-								<li>Sistema Hidráulico</li>
-								<li>Ajustes da Grua</li>
-								<li>Sistema de Controle</li>
-								<li>Sistema de Supresssão de Incêndio (se equipado)</li>
-								<li>Diagnóstico de Falhas</li>
-							</ul>
-							</li>
-							<li>Cabeça Processadora</li>
-							<li>
-							<ul class="sublist">
-								<li>Sistema de Alimentação</li>
-								<li>Sistema de Desgalhamento</li>
-								<li>Sistema Hidráulico</li>
-								<li>Sistema Elétrico</li>
-								<li>Sistema de Corte</li>
-								<li>Sistema de Lubrificação</li>
-								<li>Sistema de Medição</li>
-								<li>Sistema Estrutural</li>
-								<li>Sistema de Controle</li>
-								<li>Diagnóstico de Falhas</li>
-							</ul>
-							</li>
-						</ul>
+					<div class="title-content"><h2>Forwarder</h2></div>
+					<div class="row">
+						<div class="text-wrapper">
+							<div class="text">
+								<p>Aprenda a consertar uma Forwarder.</p>
+								<p>Conteúdo: </p>
+								<ul>
+									<li>Máquina Base</li>
+									<li>
+									<ul class="sublist">
+										<li>Apresentação dos Componentes</li>
+										<li>Sistema Rodante</li>
+										<li>Sistema Elétrico</li>
+										<li>Sistema Hidráulico</li>
+										<li>Ajustes da Grua</li>
+										<li>Sistema de Controle</li>
+										<li>Sistema de Supresssão de Incêndio (se equipado)</li>
+										<li>Diagnóstico de Falhas</li>
+									</ul>
+									</li>
+									<li>Cabeça Processadora</li>
+									<li>
+									<ul class="sublist">
+										<li>Sistema de Alimentação</li>
+										<li>Sistema de Desgalhamento</li>
+										<li>Sistema Hidráulico</li>
+										<li>Sistema Elétrico</li>
+										<li>Sistema de Corte</li>
+										<li>Sistema de Lubrificação</li>
+										<li>Sistema de Medição</li>
+										<li>Sistema Estrutural</li>
+										<li>Sistema de Controle</li>
+										<li>Diagnóstico de Falhas</li>
+									</ul>
+									</li>
+								</ul>
+							</div>
+							<div class="img-wrapper-course">
+								<img src="images/Home/Fotos-Detalhadas/pc/harvester-esteira/op-harvester-esteira.png" alt="">
+							</div>	
+						</div>
 					</div>
+					<aside class="add-info">Duração do Curso: 80 horas</aside>
 				</div>
 			
 				<!-- Informações sobre o Curso de: Retroescavadeira (Tipo uma section)-->
 				<div class="content" id="retroescavadeira">
-					<div class="title-content"><h2>Retroescavadeira (24 Horas)</h2></div>
-					<div class="text">
-						<p>Aprenda a como dar manutenção em uma retroescavadeira.</p>
-						<p>Conteúdo: </p>
-						<ul>
-							<li>Máquina Base</li>
-							<li>
-							<ul class="sublist">
-								<li>Apresentação dos Componentes</li>
-								<li>Sistema Rodante</li>
-								<li>Sistema Elétrico</li>
-								<li>Sistema Hidráulico</li>
-								<li>Ajustes da Grua</li>
-								<li>Sistema de Controle</li>
-								<li>Sistema de Supresssão de Incêndio</li>
-								<li>Diagnóstico de Falhas</li>
-							</ul>
-							</li>
-							<li>Cabeça Processadora</li>
-							<li>
-							<ul class="sublist">
-								<li>Sistema de Alimentação</li>
-								<li>Sistema de Desgalhamento</li>
-								<li>Sistema Hidráulico</li>
-								<li>Sistema Elétrico</li>
-								<li>Sistema de Corte</li>
-								<li>Sistema de Lubrificação</li>
-								<li>Sistema de Medição</li>
-								<li>Sistema Estrutural</li>
-								<li>Sistema de Controle</li>
-								<li>Diagnóstico de Falhas</li>
-							</ul>
-							</li>
-						</ul>
+					<div class="title-content"><h2>Retroescavadeira</h2></div>
+					<div class="row">
+						<div class="text-wrapper">
+							<div class="text">
+								<p>Aprenda a como dar manutenção em uma retroescavadeira.</p>
+								<p>Conteúdo: </p>
+								<ul>
+									<li>Máquina Base</li>
+									<li>
+									<ul class="sublist">
+										<li>Apresentação dos Componentes</li>
+										<li>Sistema Rodante</li>
+										<li>Sistema Elétrico</li>
+										<li>Sistema Hidráulico</li>
+										<li>Ajustes da Grua</li>
+										<li>Sistema de Controle</li>
+										<li>Sistema de Supresssão de Incêndio</li>
+										<li>Diagnóstico de Falhas</li>
+									</ul>
+									</li>
+									<li>Cabeça Processadora</li>
+									<li>
+									<ul class="sublist">
+										<li>Sistema de Alimentação</li>
+										<li>Sistema de Desgalhamento</li>
+										<li>Sistema Hidráulico</li>
+										<li>Sistema Elétrico</li>
+										<li>Sistema de Corte</li>
+										<li>Sistema de Lubrificação</li>
+										<li>Sistema de Medição</li>
+										<li>Sistema Estrutural</li>
+										<li>Sistema de Controle</li>
+										<li>Diagnóstico de Falhas</li>
+									</ul>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="img-wrapper-course">
+							<img src="images/Home/Fotos-Detalhadas/pc/harvester-esteira/op-harvester-esteira.png" alt="">
+						</div>	
 					</div>
-				</div>
+					<aside class="add-info">Duração do Curso: 24 horas</aside>
+				</div> 
 		
 				<!-- Informações sobre o Curso de: Retroescavadeira (Tipo uma section)-->
 				<div class="content" id="picador-de-madeira-mt">
-					<div class="title-content"><h2>Picador de Madeira (24 Horas)</h2></div>
-					<div class="text">
-						<p>Aprenda como consertar uma Picador de Madeira.</p>
-						<p>Conteúdo: </p>
-						<ul>
-							<li>Sistema Elétrico</li>
-							<li>Sistema Hidráulico</li>
-							<li>Embreagem</li>
-							<li>Sistema de Estrutural</li>
-							<li>Motor Diesel</li>
-						</ul>
+					<div class="title-content"><h2>Picador de Madeira</h2></div>
+					<div class="row">
+						<div class="text-wrapper">
+							<div class="text">
+								<p>Aprenda como consertar uma Picador de Madeira.</p>
+								<p>Conteúdo: </p>
+								<ul>
+									<li>Sistema Elétrico</li>
+									<li>Sistema Hidráulico</li>
+									<li>Embreagem</li>
+									<li>Sistema de Estrutural</li>
+									<li>Motor Diesel</li>
+								</ul>
+							</div>
+						</div>
+						<div class="img-wrapper-course">
+							<img src="images/Home/Fotos-Detalhadas/pc/harvester-esteira/op-harvester-esteira.png" alt="">
+						</div>
 					</div>
+					<aside class="add-info">Duração do Curso: 24 horas</aside>
 				</div>
 		
 				<!-- Informações sobre o Curso de: Retroescavadeira (Tipo uma section)-->
 				<div class="content" id="sistema-de-supressa-de-incendio-mt">
-					<div class="title-content"><h2>Sistema de Supressão de Incêndio(24 Horas)</h2></div>
-					<div class="text">
-						<p>Aprenda como consertar uma Picador de Madeira</p>
-						<p>Sistemas Atendidos: </p>
-						<ul>
-							<li>AFEX - 08 Horas</li>
-							<li>DAFO - 08 Horas</li>
-							<li>ANSUL - 08 Horas</li>
-							<li>AMEREX - 08 Horas</li>
-						</ul>
-						<p>Conteúdo: </p>
-						<ul>
-							<li>Apresentação do Sistema</li>
-							<li>Descarga Automática</li>
-							<li>Descarga Manual</li>
-							<li>Sistema Elétrico</li>
-							<li>
-							<ul class="sublist">
-								<li>Painel de Monitoramento</li>
-								<li>Sistema de Detcção</li>
-								<li>Sistema de Detonação</li>
-								<li>Diagnóstico de Falha</li>
-							</ul>
-							</li>
-							<li>Sistema de Pressurização</li>
-							<li>
-							<ul class="sublist">
-								<li>Mecanismo Disparado</li>
-								<li>Extintor</li>
-								<li>Cartuchos de Ativação</li>
-								<li>Discos de Ruptura</li>
-								<li>Iniciadores</li>
-								<li>Lacres</li>
-								<li>Peso e Conversão de Unidades</li>
-							</ul>
-							</li>
-							<li>Reparo no Sistema em caso de Disparo</li>
-							<li>Manutenção Periódica do Sistema</li>
-						</ul>
+					<div class="title-content"><h2>Sistema de Supressão de Incêndio</h2></div>
+					<div class="row">
+						<div class="text-wrapper">
+							<div class="text">
+								<p>Aprenda como consertar uma Picador de Madeira</p>
+								<p>Sistemas Atendidos: </p>
+								<ul>
+									<li>AFEX - 08 Horas</li>
+									<li>DAFO - 08 Horas</li>
+									<li>ANSUL - 08 Horas</li>
+									<li>AMEREX - 08 Horas</li>
+								</ul>
+								<p>Conteúdo: </p>
+								<ul>
+									<li>Apresentação do Sistema</li>
+									<li>Descarga Automática</li>
+									<li>Descarga Manual</li>
+									<li>Sistema Elétrico</li>
+									<li>
+									<ul class="sublist">
+										<li>Painel de Monitoramento</li>
+										<li>Sistema de Detcção</li>
+										<li>Sistema de Detonação</li>
+										<li>Diagnóstico de Falha</li>
+									</ul>
+									</li>
+									<li>Sistema de Pressurização</li>
+									<li>
+									<ul class="sublist">
+										<li>Mecanismo Disparado</li>
+										<li>Extintor</li>
+										<li>Cartuchos de Ativação</li>
+										<li>Discos de Ruptura</li>
+										<li>Iniciadores</li>
+										<li>Lacres</li>
+										<li>Peso e Conversão de Unidades</li>
+									</ul>
+									</li>
+									<li>Reparo no Sistema em caso de Disparo</li>
+									<li>Manutenção Periódica do Sistema</li>
+								</ul>
+							</div>
+						</div>
+						<div class="img-wrapper-course">
+							<img src="images/Home/Fotos-Detalhadas/pc/harvester-esteira/op-harvester-esteira.png" alt="">
+						</div>	
 					</div>
+					<aside class="add-info">Duração do Curso: 24 horas</aside>
 				</div>
 			</div>
 
