Isso q ta ai em baixo
Arrumei alguns probleminhas e fiz a primeira foto da parte de manutenção

--- a/index.html
+++ b/index.html
@@ -270,15 +270,15 @@
 			
 			<div id="manutencao-de-maquinas-florestais">
 				<!-- Informações sobre o Curso de: Harvester de Esteira (Tipo uma section)-->
-				<div class="content" id="harvester-de-esteira-mt">
+				<div class="content" id="harvester-esteira-mt">
 					<div class="title-content"><h2>Harvester de Esteira</h2></div>
 					<div class="row">
 						<div class="text-wrapper">
 							<div class="text">
-								<p>Aprenda a consertar uma Harvester de Esteira de forma fácil aqui.</p>
+								<p>Aprenda a consertar uma Harvester de Esteira de forma fácil aqui</p>
 								<p>Conteúdo: </p>
 								<ul>
-									<li>Máquina Base</li>
+									<li class="list-topic">Máquina Base</li>
 									<li>
 									<ul class="sublist">
 										<li>Apresentação dos Componentes</li>
@@ -291,7 +291,7 @@
 										<li>Diagnóstico de Falhas</li>
 									</ul>
 									</li>
-									<li>Cabeça Processadora</li>
+									<li class="list-topic">Cabeça Processadora</li>
 									<li>
 									<ul class="sublist">
 										<li>Sistema de Alimentação</li>
@@ -306,7 +306,7 @@
 										<li>Diagnóstico de Falhas</li>
 									</ul>
 									</li>
-									<li>Motor Diesel</li>
+									<li class="list-topic">Motor Diesel</li>
 									<li>
 									<ul class="sublist">
 										<li>Sistema Mecânico</li>
@@ -327,15 +327,15 @@
 				</div>
 
 				<!-- Informações sobre o Curso de: Harvester de Pneu (Tipo uma section)-->
-				<div class="content" id="harvester-de-pneu-mt">
+				<div class="content" id="harvester-pneu-mt">
 					<div class="title-content"><h2>Harvester de Pneu</h2></div>
 					<div class="row">
 						<div class="text-wrapper">
 							<div class="text">
-								<p>Aprenda a consertar uma Harvester de Pneu.</p>
+								<p>Aprenda a consertar uma Harvester de Pneu</p>
 								<p>Conteúdo: </p>
 								<ul>
-									<li>Máquina Base</li>
+									<li class="list-topic">Máquina Base</li>
 									<li>
 									<ul class="sublist">
 										<li>Apresentação dos Componentes</li>
@@ -348,7 +348,7 @@
 										<li>Diagnóstico de Falhas</li>
 									</ul>
 									</li>
-									<li>Cabeça Processadora</li>
+									<li class="list-topic">Cabeça Processadora</li>
 									<li>
 									<ul class="sublist">
 										<li>Sistema de Alimentação</li>
@@ -363,7 +363,7 @@
 										<li>Diagnóstico de Falhas</li>
 									</ul>
 									</li>
-									<li>Motor Diesel</li>
+									<li class="list-topic">Motor Diesel</li>
 									<li>
 									<ul class="sublist">
 										<li>Sistema Mecânico</li>
@@ -389,10 +389,10 @@
 					<div class="row">
 						<div class="text-wrapper">
 							<div class="text">
-								<p>Aprenda a consertar uma Forwarder.</p>
+								<p>Aprenda a consertar uma Forwarder</p>
 								<p>Conteúdo: </p>
 								<ul>
-									<li>Máquina Base</li>
+									<li class="list-topic">Máquina Base</li>
 									<li>
 									<ul class="sublist">
 										<li>Apresentação dos Componentes</li>
@@ -405,7 +405,7 @@
 										<li>Diagnóstico de Falhas</li>
 									</ul>
 									</li>
-									<li>Cabeça Processadora</li>
+									<li class="list-topic">Cabeça Processadora</li>
 									<li>
 									<ul class="sublist">
 										<li>Sistema de Alimentação</li>
@@ -422,10 +422,10 @@
 									</li>
 								</ul>
 							</div>
-							<div class="img-wrapper-course">
-								<img src="images/Home/Fotos-Detalhadas/pc/harvester-esteira/op-harvester-esteira.png" alt="">
-							</div>	
 						</div>
+						<div class="img-wrapper-course">
+							<img src="images/Home/Fotos-Detalhadas/pc/harvester-esteira/op-harvester-esteira.png" alt="">
+						</div>	
 					</div>
 					<aside class="add-info">Duração do Curso: 80 horas</aside>
 				</div>
@@ -436,10 +436,10 @@
 					<div class="row">
 						<div class="text-wrapper">
 							<div class="text">
-								<p>Aprenda a como dar manutenção em uma retroescavadeira.</p>
+								<p>Aprenda a como dar manutenção em uma retroescavadeira</p>
 								<p>Conteúdo: </p>
 								<ul>
-									<li>Máquina Base</li>
+									<li class="list-topic">Máquina Base</li>
 									<li>
 									<ul class="sublist">
 										<li>Apresentação dos Componentes</li>
@@ -452,7 +452,7 @@
 										<li>Diagnóstico de Falhas</li>
 									</ul>
 									</li>
-									<li>Cabeça Processadora</li>
+									<li class="list-topic">Cabeça Processadora</li>
 									<li>
 									<ul class="sublist">
 										<li>Sistema de Alimentação</li>
@@ -483,7 +483,7 @@
 					<div class="row">
 						<div class="text-wrapper">
 							<div class="text">
-								<p>Aprenda como consertar uma Picador de Madeira.</p>
+								<p>Aprenda como consertar uma Picador de Madeira</p>
 								<p>Conteúdo: </p>
 								<ul>
 									<li>Sistema Elétrico</li>
@@ -508,7 +508,7 @@
 						<div class="text-wrapper">
 							<div class="text">
 								<p>Aprenda como consertar uma Picador de Madeira</p>
-								<p>Sistemas Atendidos: </p>
+								<p class="list-topic">Sistemas Atendidos: </p>
 								<ul>
 									<li>AFEX - 08 Horas</li>
 									<li>DAFO - 08 Horas</li>
@@ -520,7 +520,7 @@
 									<li>Apresentação do Sistema</li>
 									<li>Descarga Automática</li>
 									<li>Descarga Manual</li>
-									<li>Sistema Elétrico</li>
+									<li class="list-topic">Sistema Elétrico</li>
 									<li>
 									<ul class="sublist">
 										<li>Painel de Monitoramento</li>
@@ -529,7 +529,7 @@
 										<li>Diagnóstico de Falha</li>
 									</ul>
 									</li>
-									<li>Sistema de Pressurização</li>
+									<li class="list-topic">Sistema de Pressurização</li>
 									<li>
 									<ul class="sublist">
 										<li>Mecanismo Disparado</li>
