Parte de Computador terminada
Organizei o código
Terminei o site para computador

--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
 							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Retroescavadeira</li>
 							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Picador de Madeira</li>
 							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Sistema de supressão de incêndio</li>
-							<li><ion-icon name="caret-forward-outline" class="list-marker"></ion-icon>Empilhadeira</li>
 						</ul>
 					</div>
 					<div class="link-wrapper">
@@ -377,7 +376,7 @@
 							</div>
 						</div>
 						<div class="img-wrapper-course">
-							<img src="images/Home/Fotos-Detalhadas/pc/harvester-esteira/op-harvester-esteira.png" alt="">
+							<img src="images/Home/Fotos-Detalhadas/pc/harvester-pneu/mt-harvester-pneu.png" alt="">
 						</div>
 					</div>
 					<aside class="add-info">Duração do Curso: 80 horas</aside>
@@ -424,14 +423,14 @@
 							</div>
 						</div>
 						<div class="img-wrapper-course">
-							<img src="images/Home/Fotos-Detalhadas/pc/harvester-esteira/op-harvester-esteira.png" alt="">
+							<img src="images/Home/Fotos-Detalhadas/pc/forwarder/mt-forwarder.png" alt="">
 						</div>	
 					</div>
 					<aside class="add-info">Duração do Curso: 80 horas</aside>
 				</div>
 			
 				<!-- Informações sobre o Curso de: Retroescavadeira (Tipo uma section)-->
-				<div class="content" id="retroescavadeira">
+				<div class="content" id="retroescavadeira-mt">
 					<div class="title-content"><h2>Retroescavadeira</h2></div>
 					<div class="row">
 						<div class="text-wrapper">
@@ -471,7 +470,7 @@
 							</div>
 						</div>
 						<div class="img-wrapper-course">
-							<img src="images/Home/Fotos-Detalhadas/pc/harvester-esteira/op-harvester-esteira.png" alt="">
+							<img src="images/Home/Fotos-Detalhadas/pc/retroescavadeira/mt-retroescavadeira.png" alt="">
 						</div>	
 					</div>
 					<aside class="add-info">Duração do Curso: 24 horas</aside>
@@ -495,7 +494,7 @@
 							</div>
 						</div>
 						<div class="img-wrapper-course">
-							<img src="images/Home/Fotos-Detalhadas/pc/harvester-esteira/op-harvester-esteira.png" alt="">
+							<img src="images/Home/Fotos-Detalhadas/pc/picador-de-madeira/mt-picador-de-madeira.png" alt="">
 						</div>
 					</div>
 					<aside class="add-info">Duração do Curso: 24 horas</aside>
@@ -547,7 +546,7 @@
 							</div>
 						</div>
 						<div class="img-wrapper-course">
-							<img src="images/Home/Fotos-Detalhadas/pc/harvester-esteira/op-harvester-esteira.png" alt="">
+							<img src="images/Home/Fotos-Detalhadas/pc/incendio/mt-incendio.png" alt="">
 						</div>	
 					</div>
 					<aside class="add-info">Duração do Curso: 24 horas</aside>
