Achei que tinha terminado

--- a/index.html
+++ b/index.html
@@ -558,37 +558,45 @@
 					<div class="title-content">
 						<h2>Solda</h2>
 					</div>
-					<div class="text">
-						<ul>
-							<li>Aspectos Gerais de Segurança</li>
-							<li>Informações Adicionais</li>
-							<li>Instruções de Segurança</li>
-							<li>Introdução</li>
-							<li>Noções de Eletricidade I</li> 
-							<li>Noções de Eletricidade II </li>
-							<li>Fonte Geradora</li>
-							<li>Circuito Fechado</li>
-							<li>Circuito Aberto</li>
-							<li>Corrente Contínua</li>
-							<li>Corrente Alternada</li>
-							<li>Eletrodo</li>
-							<li>Revestimentos</li>
-							<li>Classificação de Eletrodos Revestidos</li> 
-							<li>Soldagem ao Arco Elétrico com Eletrodo Consumível</li>
-							<li>Acessórios para Soldagem ao Arco Elétrico</li>
-							<li>Cuidados Especiais com Eletrodos Revestidos</li> 
-							<li>Equipamento para Armazenagem, Secagem e Manutenção de Secagem</li>
-							<li><abbr title="Equipamento de Proteção Individual">EPI</abbr></li>
-							<li>Preparação do Equipamento de Soldagem</li>
-							<li>Acender e Manter o Arco Elétrico</li>
-							<li>Defeitos de Soldagem</li>
-							<li>Descontinuidades</li>
-							<li>Movimento do Eletrodo</li>
-							<li>MIG MAG</li>
-							<li>Oxicorte</li>
-							<li>Glossário</li>
-						</ul>
+					<div class="row">
+						<div class="text-wrapper">
+							<div class="text">
+								<ul>
+									<li>Aspectos Gerais de Segurança</li>
+									<li>Informações Adicionais</li>
+									<li>Instruções de Segurança</li>
+									<li>Introdução</li>
+									<li>Noções de Eletricidade I</li> 
+									<li>Noções de Eletricidade II </li>
+									<li>Fonte Geradora</li>
+									<li>Circuito Fechado</li>
+									<li>Circuito Aberto</li>
+									<li>Corrente Contínua</li>
+									<li>Corrente Alternada</li>
+									<li>Eletrodo</li>
+									<li>Revestimentos</li>
+									<li>Classificação de Eletrodos Revestidos</li> 
+									<li>Soldagem ao Arco Elétrico com Eletrodo Consumível</li>
+									<li>Acessórios para Soldagem ao Arco Elétrico</li>
+									<li>Cuidados Especiais com Eletrodos Revestidos</li> 
+									<li>Equipamento para Armazenagem, Secagem e Manutenção de Secagem</li>
+									<li><abbr title="Equipamento de Proteção Individual">EPI</abbr></li>
+									<li>Preparação do Equipamento de Soldagem</li>
+									<li>Acender e Manter o Arco Elétrico</li>
+									<li>Defeitos de Soldagem</li>
+									<li>Descontinuidades</li>
+									<li>Movimento do Eletrodo</li>
+									<li>MIG MAG</li>
+									<li>Oxicorte</li>
+									<li>Glossário</li>
+								</ul>
+							</div>
+						</div>
+						<div class="img-wrapper-course">
+							<img src="images/Home/Fotos-Detalhadas/pc/solda/solda.png" alt="">
+						</div>
 					</div>
+					<aside class="add-info">Duração do Curso: 80 horas</aside>
 				</div>
 			</div>
 		</div>
