--- a/ead.html
+++ b/ead.html
@@ -7,11 +7,15 @@
 	
 	<link rel="stylesheet" href="styles/navbar.css">
 	<link rel="stylesheet" href="styles/global.css">
+	<link rel="stylesheet" href="styles/ead.css">
 	<link rel="stylesheet" href="styles/footer.css">
 	
 	<title>Document</title>
 </head>
 <body>
+	<!--
+		Paulinho só para concluir, a parte do EAD eu continuo estudando como eu vou fazer ela, mas eu pensei em colocar na página do EAD uma tela falando: "Aguardem as novidade que vem por aí. Que a Nova Era está estudando para que haja uma melhor comunicação entre os alunos e a Nova Era." e logo abaixo um campo de comentários para que quem acesse possa avaliar essa ideia e falar o que acha.
+	-->
 		<!-- NAVBAR -->
 		<nav id="navbar" class="bg-contrast-color">
 			<div class="navbar-container">
@@ -35,7 +39,19 @@
 				</div>
 			</div>
 		</nav>
-		<main></main>
+
+		<!-- MAIN -->
+		<main>
+			<h1>EAD - Nova Era</h1>
+			<cite>"Paulinho essa é a minha ideia"</cite>
+			<h2>O que é o EAD?</h2>
+			<p>
+				O EAD é o Ensino A Distância feito por videoaulas ou videochamas.
+			</p>
+			<p>Aguardem as novidade que vem por aí. A Nova Era está estudando uma forma de melhorar a comunicação entre os alunos e a Nova Era.</p>
+			<cite>"Penso também em colocar uma maneira das pessoas entrarem em contato com a Nova Era para ver o que pensam desta ideia do EAD."</cite>
+		</main>
+
 		<!-- FOOTER -->
 		<footer>
 			<p>&copy; Site feito por <a href="https://www.github.com/rodrigobarbonifilho" target="_blank">Rodrigo Barboni Filho</a></p>
