--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,7 @@
 	<nav id="navbar" class="bg-contrast-color">
 		<div class="navbar-container">
 			<a href="index.html">
-				<img class="navbar__logo" src="images/logo-novaera.webp" alt="Logo da NovaEra">
+				<img class="navbar__logo" src="images/logo.svg" alt="Logo da NovaEra">
 			</a>
 			<div class="navbar__toggle" id="navbar__toggle-js">
 				<span></span>
@@ -40,8 +40,7 @@
 	<main>
 		<!-- First Container -->
 		<div class="first-container container flex-center-align">
-			<img src="images/Contato/Logo/Logo Nova Era.svg" alt="Logo Nova Era" class="logo">
-			<span class="logo-text">NOVA ERA</span>
+			<img src="images/logo.svg" alt="Logo Nova Era" class="logo">
 		</div>
 
 		<!-- Second Container -->
