--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<nav id="navbar" class="bg-contrast-color">
 		<div class="navbar-container">
 			<a href="index.html">
-				<img class="navbar__logo" src="images/logo-novaera.webp" alt="Logo da NovaEra">
+				<img class="navbar__logo" src="images/logo.svg" alt="Logo da NovaEra">
 			</a>
 			<div class="navbar__toggle" id="navbar__toggle-js">
 				<span></span>
