página EAD e retoques na logo

--- a/ead.html
+++ b/ead.html
@@ -39,14 +39,23 @@
 
 	<!-- MAIN -->
 	<main>
-		<h1>EAD - Nova Era</h1>
-		<cite>"Paulinho essa é a minha ideia"</cite>
-		<h2>O que é o EAD?</h2>
-		<p>
-			O EAD é o Ensino A Distância feito por videoaulas ou videochamas.
-		</p>
-		<p>Aguardem as novidade que vem por aí. A Nova Era está estudando uma forma de melhorar a comunicação entre os alunos e a Nova Era.</p>
-		<cite>"Penso também em colocar uma maneira das pessoas entrarem em contato com a Nova Era para ver o que pensam desta ideia do EAD."</cite>
+		<section class="hero">
+			<img src="images/EAD/hero/working.svg" alt="Working">
+			<div class="text-container">
+				<h1>O que é o EAD?</h1>
+				<p>
+					O EAD é o Ensino A Distância feito por videoaulas ou videochamas. 
+				</p>
+				<p>
+					Aguardem as novidade que vem por aí. A Nova Era está estudando uma forma de melhorar a comunicação entre os alunos e a Nova Era.
+				</p>
+			</div>
+		</section>
+		<section>
+			<h2>Deixe a sua avaliação sobre</h2>
+		</section>
+		<section class="comments">
+		</section>
 	</main>
 
 	<!-- FOOTER -->
