--- a/ead.html
+++ b/ead.html
@@ -40,7 +40,9 @@
 	<!-- MAIN -->
 	<main>
 		<section class="hero">
-			<img src="images/EAD/hero/working.svg" alt="Working">
+			<div class="img-container">
+				<img src="images/EAD/hero/mascote-left-arm-to-up.svg" alt="Working">
+			</div>
 			<div class="text-container">
 				<h1>O que é o EAD?</h1>
 				<p>
@@ -50,11 +52,6 @@
 					Aguardem as novidade que vem por aí. A Nova Era está estudando uma forma de melhorar a comunicação entre os alunos e a Nova Era.
 				</p>
 			</div>
-		</section>
-		<section>
-			<h2>Deixe a sua avaliação sobre</h2>
-		</section>
-		<section class="comments">
 		</section>
 	</main>
 
