--- a/ead.html
+++ b/ead.html
@@ -46,7 +46,7 @@
 			<div class="text-container">
 				<h1>O que é o EAD?</h1>
 				<p>
-					O EAD é o Ensino A Distância feito por videoaulas ou videochamas. 
+					O EAD é o Ensino A Distância feito por videoaulas ou videochamadas. 
 				</p>
 				<p>
 					Aguardem as novidade que vem por aí. A Nova Era está estudando uma forma de melhorar a comunicação entre os alunos e a Nova Era.
