Arrumando title do index

--- a/ead.html
+++ b/ead.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="styles/ead.css">
 	<link rel="stylesheet" href="styles/footer.css">
 	
-	<title>Document</title>
+	<title>Nova Era - EAD</title>
 </head>
 <body>
 	<!-- NAVBAR -->
