--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/navbar.css">
 	<link rel="stylesheet" href="styles/footer.css">
+	<title>Nova Era</title>
 </head>
 <body>
 	<!-- NAVBAR -->
