arrumando links e adicionando dados

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -31,7 +31,7 @@
 					<li class="navbar__li"><a href="quem-somos.html" class="navbar__link active-link">Quem Somos</a></li>
 					<li class="navbar__li"><a href="index.html#courses" class="navbar__link">Cursos</a></li>
 					<li class="navbar__li"><a href="ead.html" class="navbar__link">Ead</a></li>
-					<li class="navbar__li"><a href="quem-somos.html#services" class="navbar__link">Serviços</a></li>
+					<li class="navbar__li"><a href="index.html" class="navbar__link">Serviços</a></li>
 					<li class="navbar__li"><a href="contato.html" class="navbar__link">Contato</a></li>
 				</ul>	
 		</div>
