--- a/contato.html
+++ b/contato.html
@@ -31,7 +31,7 @@
 					<li class="navbar__li"><a href="quem-somos.html" class="navbar__link">Quem Somos</a></li>
 					<li class="navbar__li"><a href="#cursos" class="navbar__link">Cursos</a></li>
 					<li class="navbar__li"><a href="ead.html" class="navbar__link">Ead</a></li>
-					<li class="navbar__li"><a href="servicos.html" class="navbar__link">Serviços</a></li>
+					<li class="navbar__li"><a href="index.html" class="navbar__link">Serviços</a></li>
 					<li class="navbar__li"><a href="contato.html" class="navbar__link active-link">Contato</a></li>
 				</ul>	
 		</div>
@@ -59,15 +59,15 @@
 				<div class="contact">
 					<img src="images/Contato/Icones/cellphone.svg" alt="">
 					<ul>
-						<li>(DDD)XXXXX-XXXX</li>
-						<li>(DDD)XXXXX-XXXX</li>
+						<li>(15) 99732-0176</li>
+						<li>(15) 99626-0913</li>
 					</ul>
 				</div>
 				<div class="contact">
 					<img src="images/Contato/Icones/mail.svg" alt="">
 					<ul>
-						<li>exemplodeemail@gmail.com</li>
-						<li>exemplodeemail@gmail.com</li>
+						<li>paulo@novaeratcm.com.br</li>
+						<li>nelci@novaeratcm.com.br</li>
 					</ul>
 				</div>
 			</div>
