Design  da Página de Serviços, Manutenção do link para a respectiva página

--- a/ead.html
+++ b/ead.html
@@ -30,7 +30,7 @@
 					<li class="navbar__li"><a href="quem-somos.html" class="navbar__link">Quem Somos</a></li>
 					<li class="navbar__li"><a href="#cursos" class="navbar__link">Cursos</a></li>
 					<li class="navbar__li"><a href="ead.html" class="navbar__link active-link">Ead</a></li>
-					<li class="navbar__li"><a href="index.html" class="navbar__link">Serviços</a></li>
+					<li class="navbar__li"><a href="servicos.html" class="navbar__link">Serviços</a></li>
 					<li class="navbar__li"><a href="contato.html" class="navbar__link">Contato</a></li>
 				</ul>
 			</div>
