--- a/servicos.html
+++ b/servicos.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="styles/global.css">
 	<link rel="stylesheet" href="styles/navbar.css">
 	<link rel="stylesheet" href="styles/footer.css">
+	<link rel="stylesheet" href="styles/servicos.css">
 
 </head>
 <body>
@@ -36,6 +37,16 @@
 		</div>
 	</nav>
 	
+	<!-- MAIN CONTENT -->
+	<main>
+		<div class="search-bar-container">
+
+		</div>
+		<div class="job-cards-container">
+			
+		</div>
+	</main>
+
 	<!-- FOOTER -->
 	<footer>
 		<p>&copy; Site feito por <a href="https://www.github.com/rodrigobarbonifilho" target="_blank">Rodrigo Barboni Filho</a></p>
