Bug na pesquisa arrumado

--- a/servicos.html
+++ b/servicos.html
@@ -45,10 +45,7 @@
 			</div>
 		</div>
 		<div class="jobs-card-wrapper">
-			<div class="job-cards-container">
-				<h2></h2>
-				<img src="images/Serviços/no-jobs-image.svg" alt="">
-			</div>
+			<div class="job-cards-container"></div>
 		</div>
 	</main>
 
