creio eu ultimas alterações

--- a/servicos.html
+++ b/servicos.html
@@ -41,7 +41,9 @@
 		<div class="search-box-container">
 			<div class="search-box">
 				<ion-icon name="search-outline"></ion-icon>
-				<input type="text" name="search" id="searchJs" placeholder="Procure aqui uma empresa ou vaga específica">
+				<select name="search" id="searchJs">
+					<option value="standard">Escolha aqui uma das vagas disponíveis</option>
+				</select>
 			</div>
 		</div>
 		<div class="jobs-card-wrapper">
